--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
     </div>
 
     <script>
-        // Initialize Supabase
-        const SUPABASE_URL = 'https://hfchmjmhkiqsibxtiwsk.supabase.co';
-        const SUPABASE_ANON_KEY = 'sb_publishable_WMD4rdIiqCeNX8qYsOnelA_zog_foYo';
+        // Initialize Supabase with correct anon key
+        const supabaseUrl = 'https://hfchmjmhkiqsibxtiwsk.supabase.co';
+        const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImhmY2htam1oa2lxc2lieHRpd3NrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzcyOTY5NTQsImV4cCI6MjA1Mjg3Mjk1NH0.WMD4rdIiqCeNX8qYsOnelA_zog_foYo';
         
-        const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+        const supabase = window.supabase.createClient(supabaseUrl, supabaseAnonKey);
 
         // Status color mapping
         const statusColors = {
