--- a/index.html
+++ b/index.html
@@ -108,11 +108,10 @@
     <script>
         // Initialize Supabase with correct anon key
         const supabaseUrl = 'https://hfchmjmhkiqsibxtiwsk.supabase.co';
-        const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImhmY2htam1oa2lxc2lieHRpd3NrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzcyOTY5NTQsImV4cCI6MjA1Mjg3Mjk1NH0.WMD4rdIiqCeNX8qYsOnelA_zog_foYo';
-        
+        const supabaseAnonKey = sb_secret_KNPzttrsyHqnGLMGCC_JsA_NLglgNJR        
         const supabase = window.supabase.createClient(supabaseUrl, supabaseAnonKey);
 
-        // Status color mapping
+        sb_publishable_WMD4rdIiqCeNX8qYsOnelA_zog_foYo        // Status color mapping 
         const statusColors = {
             'new': 'bg-blue-100 text-blue-800',
             'contacted': 'bg-yellow-100 text-yellow-800',
