--- a/index.html
+++ b/index.html
@@ -106,19 +106,24 @@
     </div>
 
     <script>
-        // Initialize Supabase with correct anon key
-        const supabaseUrl = 'https://hfchmjmhkiqsibxtiwsk.supabase.co';
-        const supabaseAnonKey = sb_secret_KNPzttrsyHqnGLMGCC_JsA_NLglgNJR        
-        const supabase = window.supabase.createClient(supabaseUrl, supabaseAnonKey);
+  // Initialize Supabase (PUBLIC key only)
+  const supabaseUrl = 'https://hfchmjmhkiqsibxtiwsk.supabase.co';
+  const supabaseAnonKey = 'sb_publishable_WMD4rdIiqCeNX8qYsOne1A_zog_foYo';
 
-        sb_publishable_WMD4rdIiqCeNX8qYsOnelA_zog_foYo        // Status color mapping 
-        const statusColors = {
-            'new': 'bg-blue-100 text-blue-800',
-            'contacted': 'bg-yellow-100 text-yellow-800',
-            'qualified': 'bg-green-100 text-green-800',
-            'converted': 'bg-green-600 text-white',
-            'lost': 'bg-red-100 text-red-800'
-        };
+  const supabase = window.supabase.createClient(
+    supabaseUrl,
+    supabaseAnonKey
+  );
+
+  // Status color mapping
+  const statusColors = {
+    new: 'bg-blue-100 text-blue-800',
+    contacted: 'bg-yellow-100 text-yellow-800',
+    qualified: 'bg-green-100 text-green-800',
+    converted: 'bg-green-600 text-white',
+    lost: 'bg-red-100 text-red-800'
+  };
+
 
         // Format relative time
         function formatRelativeTime(dateString) {
