--- a/index.html
+++ b/index.html
@@ -106,24 +106,20 @@
     </div>
 
     <script>
-  // Initialize Supabase (PUBLIC key only)
-  const supabaseUrl = 'https://hfchmjmhkiqsibxtiwsk.supabase.co';
-  const supabaseAnonKey = 'sb_publishable_WMD4rdIiqCeNX8qYsOne1A_zog_foYo';
+        // Initialize Supabase with correct legacy anon key
+        const supabaseUrl = 'https://hfchmjmhkiqsibxtiwsk.supabase.co';
+        const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImhmY2htam1oa2lxc2lieHRpd3NrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgzOTE3MTMsImV4cCI6MjA4Mzk2NzcxM30.ksEGK2s24omNrpJOK_hHt24RsGlI5nPupv83bIdVe_o';
+        
+        const supabase = window.supabase.createClient(supabaseUrl, supabaseAnonKey);
 
-  const supabase = window.supabase.createClient(
-    supabaseUrl,
-    supabaseAnonKey
-  );
-
-  // Status color mapping
-  const statusColors = {
-    new: 'bg-blue-100 text-blue-800',
-    contacted: 'bg-yellow-100 text-yellow-800',
-    qualified: 'bg-green-100 text-green-800',
-    converted: 'bg-green-600 text-white',
-    lost: 'bg-red-100 text-red-800'
-  };
-
+        // Status color mapping
+        const statusColors = {
+            'new': 'bg-blue-100 text-blue-800',
+            'contacted': 'bg-yellow-100 text-yellow-800',
+            'qualified': 'bg-green-100 text-green-800',
+            'converted': 'bg-green-600 text-white',
+            'lost': 'bg-red-100 text-red-800'
+        };
 
         // Format relative time
         function formatRelativeTime(dateString) {
